@@ -24,11 +24,11 @@
 /*
  * @test
  * @bug 8153353
- * @modules jdk.incubator.httpclient/jdk.incubator.http.internal.hpack
+ * @modules java.net.http/jdk.internal.net.http.hpack
  * @key randomness
- * @compile/module=jdk.incubator.httpclient jdk/incubator/http/internal/hpack/SpecHelper.java
- * @compile/module=jdk.incubator.httpclient jdk/incubator/http/internal/hpack/TestHelper.java
- * @compile/module=jdk.incubator.httpclient jdk/incubator/http/internal/hpack/BuffersTestingKit.java
- * @run testng/othervm jdk.incubator.httpclient/jdk.incubator.http.internal.hpack.BinaryPrimitivesTest
+ * @compile/module=java.net.http jdk/internal/net/http/hpack/SpecHelper.java
+ * @compile/module=java.net.http jdk/internal/net/http/hpack/TestHelper.java
+ * @compile/module=java.net.http jdk/internal/net/http/hpack/BuffersTestingKit.java
+ * @run testng/othervm java.net.http/jdk.internal.net.http.hpack.BinaryPrimitivesTest
  */
 public class HpackBinaryTestDriver { }
